--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "devenv"]
-	path = .
+[submodule "DockerCrossDevEnv"]
+	path = DockerCrossDevEnv
 	url = https://github.com/danielfli/DockerCrossDevEnv.git
